--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 	"dependencies": {
 		"@sanity/image-url": "^1.0.2",
 		"@sanity/vision": "^3.16.7",
+		"@sanity/preview-kit": "^2.3.1",
+		"@sanity/vision": "3",
 		"@types/node": "20.6.2",
 		"@types/react": "18.2.22",
 		"@types/react-dom": "18.2.7",
@@ -19,6 +21,8 @@
 		"eslint-config-next": "13.5.1",
 		"next": "13.5.1",
 		"next-sanity": "^5.5.4",
+		"next-sanity-image": "^6.1.0",
+		"sanity-plugin-iframe-pane": "^2.3.1",
 		"postcss": "8.4.30",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
