--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@headlessui/react": "^1.7.15",
+		"@heroicons/react": "^2.0.18",
+		"@portabletext/react": "^3.0.4",
 		"@sanity/image-url": "^1.0.2",
-		"@sanity/vision": "^3.16.7",
 		"@sanity/preview-kit": "^2.3.1",
 		"@sanity/vision": "3",
+		"@tailwindcss/forms": "^0.5.3",
 		"@types/node": "20.6.2",
 		"@types/react": "18.2.22",
 		"@types/react-dom": "18.2.7",
@@ -22,20 +25,17 @@
 		"next": "13.5.1",
 		"next-sanity": "^5.5.4",
 		"next-sanity-image": "^6.1.0",
-		"sanity-plugin-iframe-pane": "^2.3.1",
 		"postcss": "8.4.30",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"sanity": "^3.16.7",
-		"styled-components": "5.2",
-		"tailwindcss": "3.3.3",
-		"typescript": "5.2.2",
-		"@headlessui/react": "^1.7.15",
-		"@heroicons/react": "^2.0.18",
-		"@portabletext/react": "^3.0.4",
+		"react-loader-spinner": "^5.4.5",
+		"react-player": "^2.12.0",
 		"react-responsive-carousel": "^3.2.23",
 		"react-toastify": "^9.1.3",
-		"@tailwindcss/forms": "^0.5.3",
-		"react-player": "^2.12.0"
+		"sanity": "^3.16.7",
+		"sanity-plugin-iframe-pane": "^2.3.1",
+		"styled-components": "5.2",
+		"tailwindcss": "3.3.3",
+		"typescript": "5.2.2"
 	}
 }
