--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"autoprefixer": "10.4.15",
 		"eslint": "8.49.0",
 		"eslint-config-next": "13.5.1",
-		"next": "13.5.1",
+		"next": "^13.5.3",
 		"next-sanity": "^5.5.4",
 		"next-sanity-image": "^6.1.0",
 		"postcss": "8.4.30",
