--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
 		"styled-components": "5.2",
 		"tailwindcss": "3.3.3",
 		"typescript": "5.2.2"
+	},
+	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.10"
 	}
 }
