--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@types/react": "18.2.22",
 		"@types/react-dom": "18.2.7",
 		"autoprefixer": "10.4.15",
+		"clsx": "^2.0.0",
 		"eslint": "8.49.0",
 		"eslint-config-next": "13.5.1",
 		"next": "^13.5.3",
@@ -35,6 +36,7 @@
 		"sanity": "^3.16.7",
 		"sanity-plugin-iframe-pane": "^2.3.1",
 		"styled-components": "5.2",
+		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "3.3.3",
 		"typescript": "5.2.2"
 	},
